--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Search for articles on wikipedia or go to a random page. Built using Bootstrap and jQuery.
+Search for articles on wikipedia or go to a random page. Built using HTML/CSS and jQuery.
